test/fails/bad_tags/compose3.lgl
tag a is vec2;
tag b is vec2;

a->b a_b = [[1., 1.], [1., 1.]]:a->b;
b->a b_a = [[1., 1.], [1., 1.]]:b->a;
vec2->a bad = a_b * b_a; // Illegal downcast